...
        android:id="@+id/tvProfileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="App Name" />

    <CheckBox
        android:id="@+id/cbProfileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>

